add authorization token on openapi
