# src/rust/oikos_server/src/server.rs
@@ -36,10 +36,10 @@ impl OikosApi for Server {
 
     async fn get_recipes(
         &self,
-        _parameters: get_recipes::Parameters,
+        get_recipes::Parameters { authorization }: get_recipes::Parameters,
     ) -> Result<get_recipes::Success, get_recipes::Error<Self::Error>> {
         use get_recipes::*;
-        match self.get_recipes() {
+        match self.get_recipes(&authorization) {
             Ok(recipes) => Ok(Success::Status200(recipes)),
             Err(err) => Err(Error::Unknown(err.into())),
         }
@@ -47,11 +47,11 @@ impl OikosApi for Server {
 
     async fn add_recipe(
         &self,
-        _parameters: add_recipe::Parameters,
+        add_recipe::Parameters { authorization }: add_recipe::Parameters,
         body: add_recipe::Body,
     ) -> Result<add_recipe::Success, add_recipe::Error<Self::Error>> {
         use add_recipe::*;
-        match self.add_recipe(&body).await {
+        match self.add_recipe(&body, &authorization).await {
             Ok(recipe) => Ok(Success::Status200(recipe)),
             Err(err) => Err(Error::Unknown(err.into())),
         }
@@ -59,10 +59,13 @@ impl OikosApi for Server {
 
     async fn get_recipe_by_id(
         &self,
-        get_recipe_by_id::Parameters { recipe_id }: get_recipe_by_id::Parameters,
+        get_recipe_by_id::Parameters {
+            authorization,
+            recipe_id,
+        }: get_recipe_by_id::Parameters,
     ) -> Result<get_recipe_by_id::Success, get_recipe_by_id::Error<Self::Error>> {
         use get_recipe_by_id::*;
-        match self.get_recipe_by_id(&recipe_id) {
+        match self.get_recipe_by_id(&recipe_id, &authorization) {
             Ok(recipe) => Ok(Success::Status200(recipe)),
             Err(err @ recipe::RecipeError::NotFound(_)) => Err(Error::Status404(err.to_string())),
             Err(err) => Err(Error::Unknown(err.into())),
@@ -71,11 +74,17 @@ impl OikosApi for Server {
 
     async fn update_recipe_by_id(
         &self,
-        update_recipe_by_id::Parameters { recipe_id }: update_recipe_by_id::Parameters,
+        update_recipe_by_id::Parameters {
+            authorization,
+            recipe_id,
+        }: update_recipe_by_id::Parameters,
         body: update_recipe_by_id::Body,
     ) -> Result<update_recipe_by_id::Success, update_recipe_by_id::Error<Self::Error>> {
         use update_recipe_by_id::*;
-        match self.update_recipe_by_id(&recipe_id, &body).await {
+        match self
+            .update_recipe_by_id(&recipe_id, &body, &authorization)
+            .await
+        {
             Ok(recipe) => Ok(Success::Status200(recipe)),
             Err(err @ recipe::RecipeError::NotFound(_)) => Err(Error::Status404(err.to_string())),
             Err(err) => Err(Error::Unknown(err.into())),
@@ -84,11 +93,14 @@ impl OikosApi for Server {
 
     async fn delete_recipe_by_id(
         &self,
-        delete_recipe_by_id::Parameters { recipe_id }: delete_recipe_by_id::Parameters,
+        delete_recipe_by_id::Parameters {
+            authorization,
+            recipe_id,
+        }: delete_recipe_by_id::Parameters,
         _body: delete_recipe_by_id::Body,
     ) -> Result<delete_recipe_by_id::Success, delete_recipe_by_id::Error<Self::Error>> {
         use delete_recipe_by_id::*;
-        match self.delete_recipe_by_id(&recipe_id) {
+        match self.delete_recipe_by_id(&recipe_id, &authorization) {
             Ok(_) => Ok(Success::Status200(())),
             Err(err @ recipe::RecipeError::NotFound(_)) => Err(Error::Status404(err.to_string())),
             Err(err) => Err(Error::Unknown(err.into())),
